# sf-schema-viewer

./: .env.example  .gitignore  README.md  setup.sh  start.sh
backend/: config.py  exceptions.py  main.py  pyproject.toml
backend/models/: __init__.py  auth.py  datacloud.py  schema.py
backend/routers/: __init__.py  auth.py  datacloud.py  schema.py
backend/services/: __init__.py  datacloud.py  salesforce.py  session.py
docs/: DATACLOUD_IMPLEMENTATION_PLAN.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/flow/: DataCloudNode.tsx  ExportDropdown.tsx  ObjectNode.css  ObjectNode.tsx  RelationshipEdge.css  RelationshipEdge.tsx  SchemaFlow.css  SchemaFlow.tsx  SettingsDropdown.tsx  SmartEdge.tsx  index.ts
frontend/src/components/layout/: Header.css  Header.tsx  Layout.css  Layout.tsx  SessionInfoModal.tsx
frontend/src/components/sidebar/: CloudPackCard.tsx  CloudPacksPanel.tsx  DataCloudDetailPanel.tsx  DataCloudFieldModal.tsx  DataCloudPicker.tsx  DataCloudRelationshipModal.tsx  FieldDetailModal.tsx  NewObjectsModal.tsx  ObjectDetailPanel.tsx  ObjectPicker.css  ObjectPicker.tsx  RelationshipDetailModal.tsx  index.ts
frontend/src/components/ui/: ErrorBanner.tsx  alert-dialog.tsx  badge.tsx  index.ts  (+6 more)
frontend/src/data/: cloudPacks.ts
frontend/src/lib/: objectTypeFilters.ts  utils.ts
frontend/src/store/: index.ts
frontend/src/types/: datacloud.ts  schema.ts
frontend/src/utils/: export.ts  icons.tsx  layout.ts  layoutHelpers.ts  transformers.ts
